[gd_scene load_steps=6 format=2]

[ext_resource path="res://level/Level.gd" type="Script" id=1]
[ext_resource path="res://level/CameraLimits.gd" type="Script" id=2]
[ext_resource path="res://core/SpawnPoint.tscn" type="PackedScene" id=3]
[ext_resource path="res://core/MusicChangeTrigger.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true

[node name="Level" type="Node2D" groups=[
"level_root",
]]
script = ExtResource( 1 )

[node name="InitialMusic" parent="." instance=ExtResource( 4 )]
visible = false

[node name="CollisionShape2D" parent="InitialMusic" index="0"]
shape = SubResource( 1 )
disabled = true

[node name="Ambience" type="AudioStreamPlayer" parent="."]
autoplay = true
bus = "Ambience"

[node name="Background" type="Node2D" parent="."]

[node name="Ground" type="Node2D" parent="."]

[node name="Colliders" type="Node2D" parent="."]

[node name="LevelTransitions" type="Node2D" parent="."]

[node name="Arenas" type="Node2D" parent="."]

[node name="CameraLimits" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="CutsceneTriggers" type="Node2D" parent="."]

[node name="YSort" type="YSort" parent="."]

[node name="Foreground" type="Node2D" parent="."]

[node name="PlayerSpawnPoints" type="Node2D" parent="."]

[node name="0" parent="PlayerSpawnPoints" instance=ExtResource( 3 )]
DRAW_COLOR = Color( 0.886275, 0.192157, 0.713726, 1 )
transition_out_animation = "left_to_right"
transition_out_duration = 0.5

[node name="LevelHUD" type="CanvasLayer" parent="."]
[connection signal="initialized" from="." to="InitialMusic" method="change_music"]

[editable path="InitialMusic"]
